--- a/resume3/stylesheet.css
+++ b/resume3/stylesheet.css
@@ -1,9 +1,11 @@
+
 body{
     border-style: solid ;
     border: 100px;
     border-color:rgb(199, 119, 28);
     padding: 50px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
 header{
     text-align: center;
@@ -19,4 +21,21 @@ footer{
     background-color: lightslategray;
     text-align: center;
     
+}
+.light{
+    color: grey;
+}
+.bgcol{
+    background-color: rgb(34, 31, 31);
+}
+#navlinks{
+    padding-left: 20px;
+    padding-bottom: 20px;
+    background-color: rgb(143, 141, 139);
+    width: 100%;
+}
+#education, #experience, #skills{
+    color: aqua;
+    font-style: italic;
+    padding-left: 10px;
 }
