--- a/resume3/stylesheet.css
+++ b/resume3/stylesheet.css
@@ -5,6 +5,9 @@ body{
     border-color:rgb(199, 119, 28);
     padding: 50px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: aqua;
+    
+    
     
 }
 header{
@@ -34,8 +37,23 @@ footer{
     background-color: rgb(143, 141, 139);
     width: 100%;
 }
+#navlinks h2{
+    color: #363636;
+}
 #education, #experience, #skills{
     color: aqua;
     font-style: italic;
+    padding-left: 10px;
+}
+#image{
+    margin-top: 20px;
+    border-radius: 50%;
+    height: 250px;
+    width: 250px;
+    border-style: solid;
+    border-color: aqua ;
+    border-width: 5px;
+}
+main{
     padding-left: 10px;
 }
