--- a/resume3/stylesheet.css
+++ b/resume3/stylesheet.css
@@ -1,4 +1,10 @@
 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body{
     border-style: solid ;
     border: 100px;
@@ -9,20 +15,24 @@ body{
     
     
     
+    
 }
 header{
     text-align: center;
-    background-color: #363636;
+    background-color: #2b5163;
     color:white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-bottom: 10px;
 }
 nav{
-    background-color: dimgray;
+    
     margin-right: 85%;
+    padding-left: 10px;
 }
 footer{
     background-color: lightslategray;
     text-align: center;
+    justify-content: space-between;
     
 }
 .light{
@@ -30,12 +40,18 @@ footer{
 }
 .bgcol{
     background-color: rgb(34, 31, 31);
+    padding-left: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    justify-content: space-between;
+    line-height: 4em;
 }
 #navlinks{
     padding-left: 20px;
     padding-bottom: 20px;
-    background-color: rgb(143, 141, 139);
-    width: 100%;
+    margin-left: 5px;
+    
+    
 }
 #navlinks h2{
     color: #363636;
@@ -56,4 +72,24 @@ footer{
 }
 main{
     padding-left: 10px;
+}
+section{
+    display: flex;
+    background-color: rgb(249, 252, 255);
+    height: 100%;
+    width: 100%;
+}
+article{
+    width: 100%;
+    height: 100%;
+    
+}
+#codespacelink:hover{
+    color: #11dbe2;
+}
+#codespacelink:link{
+    color: #6b6868;
+}
+#codespacelink:visited{
+    color: rgb(216, 14, 14);
 }
