--- a/resume3/stylesheet.css
+++ b/resume3/stylesheet.css
@@ -22,7 +22,7 @@ header{
     background-color: #2b5163;
     color:white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 nav{
     
@@ -37,6 +37,7 @@ footer{
 }
 .light{
     color: grey;
+    line-height: 2em;
 }
 .bgcol{
     background-color: rgb(34, 31, 31);
@@ -56,19 +57,20 @@ footer{
 #navlinks h2{
     color: #363636;
 }
-#education, #experience, #skills{
+#education, #experience, #skills, #interests{
     color: aqua;
     font-style: italic;
     padding-left: 10px;
 }
 #image{
-    margin-top: 20px;
+    margin-top: 10px;
     border-radius: 50%;
     height: 250px;
     width: 250px;
     border-style: solid;
     border-color: aqua ;
     border-width: 5px;
+    object-fit: cover;
 }
 main{
     padding-left: 10px;
